--- a/force-app/main/default/classes/createCompoffThroughTimesheet.cls
+++ b/force-app/main/default/classes/createCompoffThroughTimesheet.cls
@@ -2,8 +2,9 @@ public without sharing class createCompoffThroughTimesheet {
 
     @AuraEnabled
     public static EMS_LM_Leave_Credit__c createCompOff(Id userId, Decimal compoffhours,Date compOffweek){
+    EMS_LM_Leave__c leaveType = [SELECT Id FROM EMS_LM_Leave__c where EMS_LM_Leave_Type__c ='Compensatory Off' LIMIT 1];
         System.debug('compOffweek'+compOffweek);
-      
+      System.debug('userId'+userId);
        Contact contactRec =[SELECT Id,
                                      EMS_TM_User__c 
                                      FROM contact 
@@ -20,6 +21,7 @@ public without sharing class createCompoffThroughTimesheet {
         comoffRecord.EMS_LM_Leave_Credited_Date__c= System.today();
         comoffRecord.EMS_LM_Leaves_Credited__c = compoffhours/8;
         comoffRecord.CompOff_Week__c = compOffweek;
+        comoffRecord.EMS_LM_Leave_Type__c = leaveType.Id;
 
         insert comoffRecord;
         return comoffRecord;
@@ -49,14 +51,17 @@ public without sharing class createCompoffThroughTimesheet {
              System.debug('else weekStart'+weekStart);
          }
         boolean compOffAlredyExist = false;
-       Contact contactRec =[SELECT Id,
+       List<Contact> contactRec =[SELECT Id,
                                      EMS_TM_User__c 
                                      FROM contact 
                                      WHERE EMS_TM_User__c =: userId];
-       List<EMS_LM_Leave_Credit__c> compOffRecord=[Select Id 
-                                                    FROM EMS_LM_Leave_Credit__c 
-                                                    WHERE EMS_LM_Employee__c =: contactRec.Id 
-                                                    AND CompOff_Week__c =: weekStart];
+                                     List<EMS_LM_Leave_Credit__c> compOffRecord;
+        if(!contactRec.isEmpty()){         
+        compOffRecord=[Select Id 
+                                FROM EMS_LM_Leave_Credit__c 
+                                WHERE EMS_LM_Employee__c =: contactRec[0].Id 
+                                AND CompOff_Week__c =: weekStart];
+        }
          System.debug('compOffRecord'+compOffRecord);
          If(!compOffRecord.isEmpty()){
               compOffAlredyExist = True;
