--- a/force-app/main/default/classes/EMS_LM_MyRequestTabLeaveReq.cls
+++ b/force-app/main/default/classes/EMS_LM_MyRequestTabLeaveReq.cls
@@ -28,7 +28,7 @@ public without Sharing class EMS_LM_MyRequestTabLeaveReq {
     @AuraEnabled(Cacheable=true)
 public static List<EMS_LM_Leave_History__c> getLMHistory(String startDateStr, String endDateStr, List<String> statusValues, List<String> typeValues) {
     List<EMS_LM_Leave_History__c> leaveHistoryList = new List<EMS_LM_Leave_History__c>();
-    String query = 'SELECT Id, EMS_LM_Leave_Type_Name__c, EMS_LM_Leave_Start_Date__c, EMS_LM_Current_Approver__c, ' + 
+    String query = 'SELECT Id, EMS_LM_Leave_Type__r.Name, EMS_LM_Leave_Start_Date__c, EMS_LM_Current_Approver__c, ' + 
                    'EMS_LM_Leave_End_Date__c, EMS_LM_Leave_Duration__c, EMS_LM_Reason__c, EMS_LM_Status__c, EMS_LM_Approved_On__c, EMS_LM_Contact__R.Name ' + 
                    'FROM EMS_LM_Leave_History__c ';
     
